# AsciiArt

./: .gitignore  BitmapImage.cpp  BitmapImage.h  BitmapImageTests.cpp  CMakeLists.txt  LICENSE  MosaicImage.cpp  MosaicImage.h  MosaicImageTests.cpp  PixelList.cpp  PixelList.h  PixelListTests.cpp  PixelMatrix.cpp  PixelMatrix.h  PrepareTiles.md  enums.cpp  enums.h  main.cpp  makefile  makefile_tests  tests.cpp
test_data/: TestCreateMosaicImage.txt
